--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.11",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
