--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
+    "jose": "^5.9.6",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
